src/main/java/ru/projects/test_task_aikamsoft/utils/error/OperationNotFoundException.java
package ru.projects.test_task_aikamsoft.utils.error;

public class OperationNotFoundException extends Exception{

    public OperationNotFoundException(String message){
        super(message);
    }
}
